# Connector

./: .env.example  .gitignore  CHANGELOG.md  GLOBAL_SETUP.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SETUP_DIAGRAM.txt  SETUP_USAGE.md  SIMPLE_SETUP_GUIDE.md  authenticate.bat  authenticate.sh  claude_desktop_config.json  mcp_config_example.json  pyproject.toml  requirements.txt  run_server.bat  run_server.sh  setup-project.bat  setup-project.ps1  setup-project.sh  setup.py
.claude/: settings.local.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: python-test.yml
config/: instances.yaml.example
servicenow_mcp/: __init__.py  config_manager.py  main.py  session_cache.py
servicenow_mcp/auth/: __init__.py  servicenow_auth.py
servicenow_mcp/cli/: __init__.py  sn_connect.py
servicenow_mcp/mcp_server/: __init__.py  server.py
templates/: claude-settings.json
